--- a/Menu/index.html
+++ b/Menu/index.html
@@ -6,11 +6,12 @@
     <title>Media Query</title>
     <link rel="stylesheet" href="style/estilos.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="style/mq.css" media="">
 </head>
-<body>
+<body onresize="alterSize()">
     <header>
         <h1>
-            Ma Site
+            Ma Page
         </h1>
         <span id="burger" class="material-symbols-outlined" onclick="clickMenu()">
             menu
@@ -45,6 +46,14 @@
     </main>
     
     <script>
+
+        function alterSize(){
+            if(window.innerWidth >= 768){
+                itens.style.display = 'block';
+            }else{
+                itens.style.display = 'none';
+            }
+        }
         function clickMenu(){
             if(itens.style.display == 'block'){
                 itens.style.display = 'none';
