Quero ver uma coisa

--- a/login/index.html
+++ b/login/index.html
@@ -15,7 +15,8 @@
         </div>
         <div id="form">
             <h1>Entrar</h1>
-            <p>Seja bem vindo(a), Faça o login para ter acesso as Configurações!!</p>
+            <p>Seja bem vindo(a), Faça o login para ter acesso as Configurações!!
+            </p>
 
 
 
