--- a/results-summary-component-main/index.html
+++ b/results-summary-component-main/index.html
@@ -29,7 +29,7 @@ bolt
 
       <div class="fin">
         <p >Great</p>
-        <p >You scored higher than 65% of the people who have taken these tests.</p>
+        <p id="ult">You scored higher than 65% of the <br>people who have taken these tests.</p>
       </div>
     </div>
     
