--- a/udemyeg/PriceTable/index.html
+++ b/udemyeg/PriceTable/index.html
@@ -49,6 +49,8 @@
 
     </div>
 
+    <footer><p>Coded By <a href="https://github.com/urassamx7">Marvin Ernesto (Urassamx7)</a></p></footer>
+
 </body>
 
 </html>
