--- a/udemyeg/PriceTable/index.html
+++ b/udemyeg/PriceTable/index.html
@@ -49,7 +49,7 @@
 
     </div>
 
-    <footer><p>Coded By <a href="https://github.com/urassamx7">Marvin Ernesto (Urassamx7)</a></p></footer>
+    <footer><p>Coded By <a href="https://github.com/urassamx7" target="_blank">Marvin Ernesto (Urassamx7)</a></p></footer>
 
 </body>
 
