--- a/intro-component-with-signup-form-master/index.html
+++ b/intro-component-with-signup-form-master/index.html
@@ -50,7 +50,9 @@
           <span></span>
         </div>
   
-        <div class="data "><input class="button" type="submit" value="Claim your free trial" ></input></div>
+        <div class="data ">
+          <input id="button" class="button" type="submit" value="Claim your free trial" ></input>
+        </div>
       </form>
       <p class="last">By clicking the button, you are agreeing to our <span class="term">Terms and Services</span></p>
     </section>
