--- a/stats-preview-card-component-main/index.html
+++ b/stats-preview-card-component-main/index.html
@@ -16,34 +16,36 @@
         <img src="images/image-header-mobile.jpg" alt="Negotiations">
       </div>
 
-
-    <div class="letter">
-      <h1>
-        Get <span class="ins">insights</span> that help your business grow.
-      </h1>
-    </div>
+    <div class="gen">
   
-    <div class="text decision">
-      Discover the benefits of data analytics and make better decisions regarding revenue, customer
-      experience, and overall efficiency.
-    </div>
+            <div class="letter">
+              <h1>
+                Get <span class="ins">insights</span> that help your business grow.
+              </h1>
+            </div>
   
-    <div class="text companies">
-      <span class="values">10k+</span>
-       <br> companies</div>
-
-    <div class="text templates">
-      <span class="values">314</span> 
-      <br> templates</div>
-    
-      <div class="text queries">
-      <span class="values">12m+</span> 
-      <br> queries</div>
+            <div class="text decision">
+              Discover the benefits of data analytics and make better decisions regarding revenue, customer
+              experience, and overall efficiency.
+            </div>
+  
+                  <div class="comp">
+                    <div class="text companies">
+                      <span class="values">10k+</span>
+                      <br> companies</div>
+                    <div class="text templates">
+                      <span class="values">314</span>
+                      <br> templates</div>
+                      <div class="text queries">
+                      <span class="values">12m+</span>
+                      <br> queries</div>
+                  </div>
+    </div>
    </div>
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/urassamx7">Marvin Ernesto</a>.
   </div>
 </body>
 </html>
