--- a/stats-preview-card-component-main/index.html
+++ b/stats-preview-card-component-main/index.html
@@ -31,7 +31,7 @@
   
                   <div class="comp">
                     <div class="text companies">
-                      <span class="values">10k+</span>
+                      <span class="values up">10k+</span>
                       <br> companies</div>
                     <div class="text templates">
                       <span class="values">314</span>
@@ -45,7 +45,7 @@
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://github.com/urassamx7">Marvin Ernesto</a>.
+    Coded by <a href="https://github.com/urassamx7" target="_blank">Marvin Ernesto</a>.
   </div>
 </body>
 </html>
