--- a/news-homepage-main/index.html
+++ b/news-homepage-main/index.html
@@ -11,118 +11,123 @@
 
   <script src="index.js"></script>
   <title>Frontend Mentor | News homepage</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-<div class="grid-container">
-  <header class="header-content">
-    
-      <div class="header-option">
-        <div class="h1-data">
-          <h1 >W.</h1>
-        </div>
-          <div class="menu-field">
-           <button class="menu-icon">
-            <span class="material-symbols-outlined">
-              menu
-              </span>
-           </button>
-          <div class="home" style="display: none">Home</div>
-          <div class="new" style="display: none">New</div>
-          <div class="popular" style="display: none">Popular</div>
-          <div class="trending" style="display: none"> Trending</div>
-          <div class="categories" style="display: none">Categories</div>
-        </div>
+ <div class="allContent">
+  <nav class="header-content">
+   
+    <div class="header-option">
+      <div class="h1-data">
+        <h1 >W.</h1>
       </div>
-  </header>
-    <div class="puzzle-img">
-      <img src="assets/images/image-web-3-mobile.jpg" alt="">
-    </div>
-
-    <div class="web-dive">
-      <div class="web-future">
-        <h2>The Bright Future of Web 3.0?</h2>
-      </div>
-      <div class="readmore-data">
-        <p>
-          We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people.
-          But is it really fulfilling its promise?
-        </p>
-        <button class="readmoreBtn">Read more</button>
-      </div>
-    </div>
-  
-    <section class="section-data">
-      <div class="new-feature">
-        <h2>
-          New
-        </h2>
-      </div> 
-
-      
-      <div class="cars-comparison">
-        <div class="class-cars">
-          <h3>Hydrogen VS Electric Cars</h3>
-          <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
+        <div class="menu-field">
+         <button class="menu-icon">
+          <span class="material-symbols-outlined">
+            menu
+            </span>
+         </button>
+        <div class="home" >
+          <a href="#home" class="link-area">Home</a>
         </div>
-      </div>
-
-      <div class="ai-era">
-        <div class="ai-class">
-          <h3>The Downsides of AI Artistry</h3>
-          <p>What are the possible adverse effects of on-demand AI image generation?</p>
+        <div class="new" >
+          <a href="#new" class="link-area">New</a>
         </div>
-      </div>
-
-      <div class="dry-doubt">
-        <div class="dry-class">
-          <h3>Is VC Funding Drying Up?</h3>
-          <p>Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
+        <div class="popular" >
+          <a href="#popular" class="link-area">Popular</a>
         </div>
-      </div>
-    </section>
-    <div class="latest-features">
-      <div class="pc-upgrade">
-        <div class="img-content">
-          <img src="assets/images/image-retro-pcs.jpg" alt="">
+        <div class="trending" > 
+          <a href="#trending" class="link-area">Trending</a>
         </div>
-        <div class="img-data">
-          <span class="number-id">01</span>
-          <h4 class="pc-data">Reviving Retro PCs</h4>
-          <p class="pc-data">What happens when old PCs are given modern upgrades?</p>
-        </div>
-      </div>
-      <div class="top-laptops">
-        <div class="img-content">
-          <img src="assets/images/image-top-laptops.jpg" alt="">
-        </div>
-        <div class="img-data">
-          <span class="number-id">02</span>
-          <h4 class="pc-data">Top 10 Laptops of 2022</h4>
-          <p class="pc-data">Our best picks for various needs and budgets.</p>
-        </div>
-      </div>
-      <div class="grow-games">
-<div class="img-content">
-  <img src="assets/images/image-gaming-growth.jpg" alt="">
-</div>
-        <div class="img-data">
-          <span class="number-id">03</span>
-          <h4 class="pc-data">The Growth of Gaming</h4>
-          <p class="pc-data">How the pandemic has sparked fresh opportunities.</p>
+        <div class="categories" >
+          <a href="#categories" class="link-area">Categories</a>
         </div>
       </div>
     </div>
-</div>
+    </nav>  
+
+   <div class="grid-container">
+   
+     <div class="puzzle-img">
+       <img src="assets/images/image-web-3-mobile.jpg" id="smallImg" alt="">
+       <img src="assets/images/image-web-3-desktop.jpg" id="bigImg" alt="">
+     </div>
+     <div class="web-dive">
+       <div class="web-future">
+         <h2>The Bright Future of Web 3.0?</h2>
+       </div>
+       <div class="readmore-data">
+         <p>
+           We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people.
+           But is it really fulfilling its promise?
+         </p>
+         <button class="readmoreBtn">Read more</button>
+       </div>
+     </div>
+   
+     <section class="section-data">
+       <div class="new-feature">
+         <h2>
+           New
+         </h2>
+       </div>
+   
+       <div class="cars-comparison">
+         <div class="class-cars">
+           <h3>Hydrogen VS Electric Cars</h3>
+           <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
+         </div>
+       </div>
+       <div class="ai-era">
+         <div class="ai-class">
+           <h3>The Downsides of AI Artistry</h3>
+           <p>What are the possible adverse effects of on-demand AI image generation?</p>
+         </div>
+       </div>
+       <div class="dry-doubt">
+         <div class="dry-class">
+           <h3>Is VC Funding Drying Up?</h3>
+           <p>Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
+         </div>
+       </div>
+     </section>
+     <div class="latest-features">
+       <div class="pc-upgrade">
+         <div class="img-content">
+           <img src="assets/images/image-retro-pcs.jpg" alt="">
+         </div>
+         <div class="img-data">
+           <span class="number-id">01</span>
+           <h4 class="pc-data">Reviving Retro PCs</h4>
+           <p class="pc-data">What happens when old PCs are given modern upgrades?</p>
+         </div>
+       </div>
+       <div class="top-laptops">
+         <div class="img-content">
+           <img src="assets/images/image-top-laptops.jpg" alt="">
+         </div>
+         <div class="img-data">
+           <span class="number-id">02</span>
+           <h4 class="pc-data">Top 10 Laptops of 2022</h4>
+           <p class="pc-data">Our best picks for various needs and budgets.</p>
+         </div>
+       </div>
+       <div class="grow-games">
+   <div class="img-content">
+   <img src="assets/images/image-gaming-growth.jpg" alt="">
+   </div>
+         <div class="img-data">
+           <span class="number-id">03</span>
+           <h4 class="pc-data">The Growth of Gaming</h4>
+           <p class="pc-data">How the pandemic has sparked fresh opportunities.</p>
+         </div>
+       </div>
+     </div>
+   </div>
+ </div>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://www.github.com/urassamx7" target="_blank">Marvin Mussacate</a>.
   </div>
 </body>
 </html>
