--- a/news-homepage-main/index.html
+++ b/news-homepage-main/index.html
@@ -9,41 +9,63 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 
-  <script src="index.js"></script>
+  <script src="index.js" defer></script>
   <title>Frontend Mentor | News homepage</title>
 </head>
 <body>
  <div class="allContent">
   <nav class="header-content">
-   
     <div class="header-option">
       <div class="h1-data">
-        <h1 >W.</h1>
+        <h1>W.</h1>
       </div>
-        <div class="menu-field">
-         <button class="menu-icon">
-          <span class="material-symbols-outlined">
-            menu
-            </span>
-         </button>
-        <div class="home" >
+      <div class="alternative-sorry">
+        <div class="home">
           <a href="#home" class="link-area">Home</a>
         </div>
-        <div class="new" >
+        <div class="new">
           <a href="#new" class="link-area">New</a>
         </div>
-        <div class="popular" >
+        <div class="popular">
           <a href="#popular" class="link-area">Popular</a>
         </div>
-        <div class="trending" > 
+        <div class="trending">
           <a href="#trending" class="link-area">Trending</a>
         </div>
-        <div class="categories" >
+        <div class="categories">
           <a href="#categories" class="link-area">Categories</a>
         </div>
       </div>
+      <div class="menu-container">
+        <div class="menu-field">
+          <button class="close-btn">
+            <span class="material-symbols-outlined">close</span>
+          </button>
+          <div class="home">
+            <a href="#home" class="link-area">Home</a>
+          </div>
+          <div class="new">
+            <a href="#new" class="link-area">New</a>
+          </div>
+          <div class="popular">
+            <a href="#popular" class="link-area">Popular</a>
+          </div>
+          <div class="trending">
+            <a href="#trending" class="link-area">Trending</a>
+          </div>
+          <div class="categories">
+            <a href="#categories" class="link-area">Categories</a>
+          </div>
+        </div>
+        <button class="menu-icon">
+          <span class="material-symbols-outlined">menu</span>
+        </button>
+      </div>
     </div>
-    </nav>  
+  </nav>
+
+  
+  
 
    <div class="grid-container">
    
